--- a/wc-telr/includes/css/admin-style.css
+++ b/wc-telr/includes/css/admin-style.css
@@ -1,32 +1,15 @@
-.inline-list {
-    display: inline-flex;
+.cko-admin-settings__links li {
+	color: #646970;
+	font-size: 17px;
+	font-weight: 600;
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	white-space: nowrap;
 }
-
-.inline-list li{
-    margin-left: 10px;
+.cko-admin-settings__links a {
+	text-decoration: none;
 }
-.inline-list li:first-child {
-    width: 150px;
-}
-tfoot th:last-child {
-    display: none;
-}
-.paginate_button {
-    cursor: pointer;
-    padding: 5px;
-}
-#symparts, #symtoms, #concsymptoms, #concreport {
-    height: 165px;
-    width: 200px;
-}
-
-.wd225{
-	width: 225px;
-}
-.test{
-	font-size: 5em;
-}
-
-#sym-listing-conc td{
-    border: 1px solid #e1e1e1;
+.cko-admin-settings__links .current {
+	color: #000;
 }
