TELR-3806 add jeelpay logo on checkout page

--- a/wc-telr/includes/css/telr_custom_style.css
+++ b/wc-telr/includes/css/telr_custom_style.css
@@ -187,3 +187,8 @@ img.logo_tabby {
 	width: 70px;
 	background: url('../../assets/images/tabbysmall.png') 0 0;
 }
+img.logo_jeelpay {
+	height: 30px !important;
+	width: 108px;
+	background: url('../../assets/images/jeelpay_logo.svg') 0 0;
+}
